# minerals

./: .env  .gitignore  Cargo.toml  README.md  [A-Za-z]
.tmp/cargo-target/: .rustc_info.json
.tmp/cargo-target/debug/.fingerprint/bytes-faf46870370fd987/: output-lib-bytes
.tmp/cargo-target/debug/.fingerprint/cfg-if-1dd76fae51940b68/: output-lib-cfg_if
.tmp/cargo-target/debug/.fingerprint/find-msvc-tools-94d0ffa030237bbd/: output-lib-find_msvc_tools
.tmp/cargo-target/debug/.fingerprint/futures-core-417b3bf1a024c30d/: output-lib-futures_core
.tmp/cargo-target/debug/.fingerprint/futures-task-2980d455d3c4dc2a/: output-lib-futures_task
.tmp/cargo-target/debug/.fingerprint/itoa-9bbf33538efe6fa8/: output-lib-itoa
.tmp/cargo-target/debug/.fingerprint/litemap-1427789a8c30a03d/: output-lib-litemap
.tmp/cargo-target/debug/.fingerprint/log-b4cebb764eb37943/: output-lib-log
.tmp/cargo-target/debug/.fingerprint/once_cell-7b9a110c0e7fa83c/: output-lib-once_cell
.tmp/cargo-target/debug/.fingerprint/shlex-10a425921a9be8d0/: output-lib-shlex
data/minerals/mineral.silicates.0x1ec57681/: mineral.json  report.html  report.tex
data/minerals/mineral.silicates.0x5b6b8000/: mineral.ar.json  mineral.cs.json  mineral.de.json  mineral.es.json  mineral.fr.json  mineral.hi.json  mineral.ja.json  mineral.json  mineral.pt.json  mineral.zh.json  report.html  report.tex  report.xdv
src/: agent.rs  i18n.rs  main.rs  models.rs  pdf.rs  web.rs
static/: about.html  admin.html  app.css  home.html  index.html  info.html  mineral.html  report.html  report.tex  theme.js
(+9 files in other folders)
