[package]
name = "minerals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = "0.12"
axum = { version = "0.7", features = ["form", "json", "macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "process", "fs"] }
tower-http = { version = "0.5", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
